iptables/rules.v6
# Generated by ip6tables-save v1.8.10 (nf_tables) on Sun Aug 16 05:23:11 2026
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:TCP - [0:0]
:UDP - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i wg+ -j ACCEPT
-A INPUT -i tailscale+ -j ACCEPT
-A INPUT -i lxc+ -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 2 -j ACCEPT
-A INPUT -s fe80::/10 -p ipv6-icmp -j ACCEPT
-A INPUT -p udp -m udp --sport 547 --dport 546 -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A TCP -p tcp -m tcp --dport 443 -m comment --comment "http protocol over TLS/SSL" -j ACCEPT
-A TCP -p tcp -m tcp --dport 80 -m comment --comment "World Wide Web HTTP" -j ACCEPT
-A UDP -p udp -m udp --dport 443 -m comment --comment "http protocol over TLS/SSL" -j ACCEPT
-A UDP -p udp -m udp --dport 5520 -m comment --comment "Hytale Server" -j ACCEPT
-A UDP -p udp -m udp --dport 51820 -j ACCEPT
-A UDP -p udp -m udp --dport 3478 -m comment --comment "Session Traversal Utilities for NAT (STUN) port" -j ACCEPT
COMMIT
# Completed on Sun Aug 16 05:23:11 2026
